--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -2,15 +2,15 @@
 #    uv pip compile requirements.dev.in --output-file=requirements.dev.txt
 -e .
     # via -r requirements.dev.in
-aiobotocore==2.17.0
+aiobotocore==2.20.0
     # via
     #   -r requirements.txt
     #   async-s3
-aiohappyeyeballs==2.4.4
+aiohappyeyeballs==2.4.6
     # via
     #   -r requirements.txt
     #   aiohttp
-aiohttp==3.11.11
+aiohttp==3.11.13
     # via
     #   -r requirements.txt
     #   aiobotocore
@@ -32,28 +32,28 @@ antlr4-python3-runtime==4.13.2
     # via moto
 astroid==3.3.8
     # via pylint
-attrs==24.3.0
+attrs==25.1.0
     # via
     #   -r requirements.txt
     #   aiohttp
     #   allure-python-commons
     #   jsonschema
     #   referencing
-aws-sam-translator==1.94.0
+aws-sam-translator==1.95.0
     # via cfn-lint
 aws-xray-sdk==2.14.0
     # via moto
-babel==2.16.0
+babel==2.17.0
     # via mkdocs-material
 blinker==1.9.0
     # via flask
-boto3==1.35.93
+boto3==1.36.23
     # via
     #   -r requirements.txt
     #   async-s3
     #   aws-sam-translator
     #   moto
-botocore==1.35.93
+botocore==1.36.23
     # via
     #   -r requirements.txt
     #   aiobotocore
@@ -63,13 +63,13 @@ botocore==1.35.93
     #   s3transfer
 bracex==2.5.post1
     # via wcmatch
-certifi==2024.12.14
+certifi==2025.1.31
     # via requests
 cffi==1.17.1
     # via cryptography
 cfgv==3.4.0
     # via pre-commit
-cfn-lint==1.22.5
+cfn-lint==1.25.1
     # via moto
 charset-normalizer==3.4.1
     # via requests
@@ -79,15 +79,14 @@ click==8.1.8
     #   async-s3
     #   flask
     #   mkdocs
-    #   mkdocstrings
     #   rich-click
 colorama==0.4.6
     # via
     #   griffe
     #   mkdocs-material
-coverage==7.6.10
+coverage==7.6.12
     # via pytest-cov
-cryptography==44.0.0
+cryptography==44.0.1
     # via
     #   joserfc
     #   moto
@@ -97,13 +96,13 @@ distlib==0.3.9
     # via virtualenv
 docker==7.1.0
     # via moto
-filelock==3.16.1
+filelock==3.17.0
     # via virtualenv
 flask==3.1.0
     # via
     #   flask-cors
     #   moto
-flask-cors==5.0.0
+flask-cors==5.0.1
     # via moto
 frozenlist==1.5.0
     # via
@@ -112,13 +111,13 @@ frozenlist==1.5.0
     #   aiosignal
 ghp-import==2.1.0
     # via mkdocs
-graphql-core==3.2.5
+graphql-core==3.2.6
     # via moto
-griffe==1.5.5
+griffe==1.5.7
     # via mkdocstrings-python
 hatchling==1.27.0
     # via -r requirements.dev.in
-identify==2.6.5
+identify==2.6.8
     # via pre-commit
 idna==3.10
     # via
@@ -129,7 +128,7 @@ iniconfig==2.0.0
     # via pytest
 invoke==2.2.0
     # via -r requirements.dev.in
-isort==5.13.2
+isort==6.0.0
     # via pylint
 itsdangerous==2.2.0
     # via flask
@@ -146,7 +145,7 @@ jmespath==1.0.1
     #   aiobotocore
     #   boto3
     #   botocore
-joserfc==1.0.1
+joserfc==1.0.3
     # via moto
 jsonpatch==1.33
     # via cfn-lint
@@ -159,7 +158,7 @@ jsonschema==4.23.0
     #   aws-sam-translator
     #   openapi-schema-validator
     #   openapi-spec-validator
-jsonschema-path==0.3.3
+jsonschema-path==0.3.4
     # via openapi-spec-validator
 jsonschema-specifications==2024.10.1
     # via
@@ -201,25 +200,27 @@ mkdocs==1.6.1
     #   mkdocs-awesome-pages-plugin
     #   mkdocs-material
     #   mkdocstrings
-mkdocs-autorefs==1.3.0
+mkdocs-autorefs==1.4.0
     # via
     #   mkdocstrings
     #   mkdocstrings-python
 mkdocs-awesome-pages-plugin==2.10.1
     # via -r requirements.dev.in
 mkdocs-get-deps==0.2.0
-    # via mkdocs
-mkdocs-material==9.5.49
+    # via
+    #   mkdocs
+    #   mkdocstrings
+mkdocs-material==9.6.5
     # via -r requirements.dev.in
 mkdocs-material-extensions==1.3.1
     # via mkdocs-material
-mkdocstrings==0.27.0
+mkdocstrings==0.28.2
     # via
     #   -r requirements.dev.in
     #   mkdocstrings-python
-mkdocstrings-python==1.13.0
+mkdocstrings-python==1.16.2
     # via mkdocstrings
-moto==5.0.26
+moto==5.1.0
     # via -r requirements.dev.in
 mpmath==1.3.0
     # via sympy
@@ -229,7 +230,7 @@ multidict==6.1.0
     #   aiobotocore
     #   aiohttp
     #   yarl
-mypy==1.14.1
+mypy==1.15.0
     # via -r requirements.dev.in
 mypy-extensions==1.0.0
     # via mypy
@@ -259,7 +260,6 @@ pathspec==0.12.1
 platformdirs==4.3.6
     # via
     #   mkdocs-get-deps
-    #   mkdocstrings
     #   pylint
     #   virtualenv
 pluggy==1.5.0
@@ -269,9 +269,9 @@ pluggy==1.5.0
     #   pytest
 ply==3.11
     # via jsonpath-ng
-pre-commit==4.0.1
+pre-commit==4.1.0
     # via -r requirements.dev.in
-propcache==0.2.1
+propcache==0.3.0
     # via
     #   -r requirements.txt
     #   aiohttp
@@ -280,7 +280,7 @@ py-partiql-parser==0.6.1
     # via moto
 pycparser==2.22
     # via cffi
-pydantic==2.10.5
+pydantic==2.10.6
     # via aws-sam-translator
 pydantic-core==2.27.2
     # via pydantic
@@ -289,9 +289,9 @@ pygments==2.19.1
     #   -r requirements.txt
     #   mkdocs-material
     #   rich
-pylint==3.3.3
+pylint==3.3.4
     # via -r requirements.dev.in
-pymdown-extensions==10.14
+pymdown-extensions==10.14.3
     # via
     #   -r requirements.dev.in
     #   mkdocs-material
@@ -304,7 +304,7 @@ pytest==8.3.4
     #   allure-pytest
     #   pytest-asyncio
     #   pytest-cov
-pytest-asyncio==0.25.2
+pytest-asyncio==0.25.3
     # via -r requirements.dev.in
 pytest-cov==6.0.0
     # via -r requirements.dev.in
@@ -329,7 +329,7 @@ pyyaml==6.0.2
     #   responses
 pyyaml-env-tag==0.1
     # via mkdocs
-referencing==0.35.1
+referencing==0.36.2
     # via
     #   jsonschema
     #   jsonschema-path
@@ -353,15 +353,15 @@ rich==13.9.4
     # via
     #   -r requirements.txt
     #   rich-click
-rich-click==1.8.5
+rich-click==1.8.6
     # via
     #   -r requirements.txt
     #   async-s3
-rpds-py==0.22.3
+rpds-py==0.23.1
     # via
     #   jsonschema
     #   referencing
-s3transfer==0.10.4
+s3transfer==0.11.2
     # via
     #   -r requirements.txt
     #   boto3
@@ -378,7 +378,7 @@ toml==0.10.2
     # via -r requirements.dev.in
 tomlkit==0.13.2
     # via pylint
-trove-classifiers==2025.1.15.22
+trove-classifiers==2025.2.18.16
     # via hatchling
 typing-extensions==4.12.2
     # via
@@ -388,6 +388,7 @@ typing-extensions==4.12.2
     #   mypy
     #   pydantic
     #   pydantic-core
+    #   referencing
     #   rich-click
 urllib3==2.3.0
     # via
@@ -397,7 +398,7 @@ urllib3==2.3.0
     #   docker
     #   requests
     #   responses
-virtualenv==20.29.0
+virtualenv==20.29.2
     # via pre-commit
 watchdog==6.0.0
     # via mkdocs
@@ -406,6 +407,7 @@ wcmatch==10.0
 werkzeug==3.1.3
     # via
     #   flask
+    #   flask-cors
     #   moto
 wrapt==1.17.2
     # via
